# colorlab7

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: windows.yml
